refactor(core): simplify return usage in services and utilities, remove unused methods
- Replaced unnecessary boolean/return values with void for methods like `addCoins`, `removeClientEntity`, etc., to streamline logic.
- Applied `Math.clamp` for cleaner range checks across various utilities.
- Removed deprecated or unused methods from several classes like `DataController` and `Vote`.